security(be): avoid leaking malformed JSON parser details in WARN logs